changed projectCard to show overflow on hover with css to avoid image loading issues

--- a/src/Components/ProjectCard/ProjectCard.css
+++ b/src/Components/ProjectCard/ProjectCard.css
@@ -6,6 +6,10 @@
     cursor: pointer;
 }
 
+.project-card:hover .project-card__overlay {
+    display: block;
+}
+
 .project-card__name {
     position: absolute;
     top: .375rem;
@@ -21,6 +25,7 @@
 }
 
 .project-card__overlay {
+    display: none;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, .3);
